objects/shop__c.object
<CustomObject>
    <fields>
        <fullName>Area_Of_Shop__c</fullName>
        <label>Area Of Shop</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Of_Shop__c</fullName>
        <label>Location Of Shop</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_name__c</fullName>
        <label>Owner name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_name__c</fullName>
        <label>Shop name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>shops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>